--- a/selenium_test.ipynb
+++ b/selenium_test.ipynb
@@ -8,7 +8,21 @@
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.keys import Keys\n",
-    "import time"
+    "import time\n",
+    "driver = webdriver.Firefox()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "driver.get(\"http://localhost:3000/react-tutorial-solutions\")\n",
+    "driver.maximize_window()\n",
+    "# TODO: run by enter\n",
+    "time.sleep(5)\n"
    ]
   },
   {
@@ -17,9 +31,151 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver = webdriver.Firefox()\n",
-    "driver.get(\"http://localhost:3000/react-tutorial-solutions\")\n",
+    "# test win\n",
+    "\n",
+    "xPath = '/html/body/div/div/div[1]/div[1]/div/div[3]/button[2]'\n",
+    "driver.find_element('xpath',xPath).click()\n",
+    "xPath = '/html/body/div/div/div[1]/div[1]/div/div[2]/button[3]'\n",
+    "driver.find_element('xpath',xPath).click()\n",
+    "xPath = '/html/body/div/div/div[1]/div[1]/div/div[2]/button[2]'\n",
+    "driver.find_element('xpath',xPath).click()\n",
+    "xPath = '/html/body/div/div/div[1]/div[1]/div/div[1]/button[3]'\n",
+    "driver.find_element('xpath',xPath).click()\n",
+    "xPath = '/html/body/div/div/div[1]/div[1]/div/div[1]/button[2]'\n",
+    "driver.find_element('xpath',xPath).click()\n",
+    "\n",
+    "xPath = '//*[@id=\"root\"]/div/div[1]/div[2]/h2'\n",
+    "assert \"\\\"X\\\" is winner!\" in driver.find_element(\"xpath\", xPath).text\n",
+    "print(\"success\")\n",
+    "time.sleep(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "success\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test draw\n",
+    "\n",
+    "time.sleep(3)\n",
+    "xPath = '/html/body/div/div/div[1]/div[1]/div/div[1]/button[1]'\n",
+    "driver.find_element('xpath',xPath).click()\n",
+    "xPath = '/html/body/div/div/div[1]/div[1]/div/div[1]/button[2]'\n",
+    "driver.find_element('xpath',xPath).click()\n",
+    "xPath = '/html/body/div/div/div[1]/div[1]/div/div[1]/button[3]'\n",
+    "driver.find_element('xpath',xPath).click()\n",
+    "xPath = '/html/body/div/div/div[1]/div[1]/div/div[2]/button[1]'\n",
+    "driver.find_element('xpath',xPath).click()\n",
+    "xPath = '/html/body/div/div/div[1]/div[1]/div/div[2]/button[2]'\n",
+    "driver.find_element('xpath',xPath).click()\n",
+    "xPath = '/html/body/div/div/div[1]/div[1]/div/div[3]/button[1]'\n",
+    "driver.find_element('xpath',xPath).click()\n",
+    "xPath = '/html/body/div/div/div[1]/div[1]/div/div[2]/button[3]'\n",
+    "driver.find_element('xpath',xPath).click()\n",
+    "xPath = '/html/body/div/div/div[1]/div[1]/div/div[3]/button[3]'\n",
+    "driver.find_element('xpath',xPath).click()\n",
+    "xPath = '/html/body/div/div/div[1]/div[1]/div/div[3]/button[2]'\n",
+    "driver.find_element('xpath',xPath).click()\n",
+    "\n",
+    "xPath = '/html/body/div/div/div[1]/h2'\n",
+    "assert \"Draw!\" in driver.find_element(\"xpath\", xPath).text\n",
+    "print('success')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reset button is visable\n"
+     ]
+    }
+   ],
+   "source": [
+    "# reset\n",
+    "time.sleep(3)\n",
+    "xPath = '/html/body/div/div/div[1]/div[1]/div/div[1]/button[1]'\n",
+    "driver.find_element('xpath',xPath).click()\n",
+    "xPath = '/html/body/div/div/div[1]/div[1]/div/div[1]/button[2]'\n",
+    "driver.find_element('xpath',xPath).click()\n",
+    "xPath = '/html/body/div/div/div[1]/div[1]/div/div[1]/button[3]'\n",
+    "driver.find_element('xpath',xPath).click()\n",
+    "xPath = '/html/body/div/div/div[1]/div[1]/div/div[2]/button[1]'\n",
+    "driver.find_element('xpath',xPath).click()\n",
+    "\n",
+    "\n",
+    "xPath = '/html/body/div/div/div[1]/div[2]/button'\n",
+    "assert \"Reset game\" in driver.find_element(\"xpath\", xPath).text\n",
+    "assert driver.find_element(\"xpath\", xPath).is_displayed()\n",
+    "print('Reset button is visable')\n",
+    "\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "play again button is visable\n"
+     ]
+    }
+   ],
+   "source": [
+    "# play again\n",
+    "time.sleep(3)\n",
+    "xPath = '/html/body/div/div/div[1]/div[1]/div/div[1]/button[1]'\n",
+    "driver.find_element('xpath',xPath).click()\n",
+    "xPath = '/html/body/div/div/div[1]/div[1]/div/div[1]/button[2]'\n",
+    "driver.find_element('xpath',xPath).click()\n",
+    "xPath = '/html/body/div/div/div[1]/div[1]/div/div[1]/button[3]'\n",
+    "driver.find_element('xpath',xPath).click()\n",
+    "xPath = '/html/body/div/div/div[1]/div[1]/div/div[2]/button[1]'\n",
+    "driver.find_element('xpath',xPath).click()\n",
+    "xPath = '/html/body/div/div/div[1]/div[1]/div/div[2]/button[2]'\n",
+    "driver.find_element('xpath',xPath).click()\n",
+    "xPath = '/html/body/div/div/div[1]/div[1]/div/div[3]/button[1]'\n",
+    "driver.find_element('xpath',xPath).click()\n",
+    "xPath = '/html/body/div/div/div[1]/div[1]/div/div[2]/button[3]'\n",
+    "driver.find_element('xpath',xPath).click()\n",
+    "xPath = '/html/body/div/div/div[1]/div[1]/div/div[3]/button[3]'\n",
+    "driver.find_element('xpath',xPath).click()\n",
+    "xPath = '/html/body/div/div/div[1]/div[1]/div/div[3]/button[2]'\n",
+    "driver.find_element('xpath',xPath).click()\n",
+    "\n",
+    "\n",
+    "xPath = '/html/body/div/div/div[1]/button'\n",
+    "# driver.find_element('xpath',xPath).click()\n",
+    "\n",
+    "assert driver.find_element(\"xpath\", xPath).is_displayed()\n",
+    "print('play again button is visable')"
    ]
   }
  ],
@@ -39,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4,
   "vscode": {
