--- a/selenium_test.ipynb
+++ b/selenium_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,6 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# test win\n",
     "\n",
     "xPath = '/html/body/div/div/div[1]/div[1]/div/div[3]/button[2]'\n",
@@ -47,21 +48,13 @@
     "xPath = '//*[@id=\"root\"]/div/div[1]/div[2]/h2'\n",
     "assert \"\\\"X\\\" is winner!\" in driver.find_element(\"xpath\", xPath).text\n",
     "print(\"success\")\n",
-    "time.sleep(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "time.sleep(5)\n",
     "driver.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
